# soqtec

./: .gitignore  ADDRESS_REGISTRY.md  Anchor.toml  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  demo-playback.html  index.html  package-lock.json  package.json  script.js  style.css  tsconfig.json
docs/: ARCHITECTURE.md  BRIDGE_SPEC.md  PAUL_ARCHITECTURE.md  SECURITY.md
programs/soqtec-bridge/: Cargo.toml
programs/soqtec-bridge/src/: lib.rs
programs/xmss-vault/: Cargo.toml
programs/xmss-vault/src/: errors.rs  lib.rs  merkle.rs  state.rs  wots.rs
relayer/: .env.example  lane-manager.py  package-lock.json  package.json  soqtec-lane-manager.service  tsconfig.json
relayer/src/: api.ts  config.ts  index.ts  queue.ts
relayer/src/bridge/: solana-executor.ts
relayer/src/cea/: index.ts  router.ts  solana-cea.ts  types.ts
relayer/src/idl/: soqtec_bridge.json
relayer/src/utils/: logger.ts
relayer/src/watchers/: solana.ts  soqucoin.ts
scripts/: cross-verify-wots.js  demo-bridge-to-vault.js  demo-quantum-express.js  demo-results.json  demo-soqtec-unified.js  demo-xmss-vault.js  deploy-devnet.sh  deploy-terminal.sh  deploy-test-psoq.sh  devnet-token-info.json  e2e-burn-test.js  e2e-dua-burn-test.js  e2e-vault-bridge-test.js  initialize-bridge.js  initialize-bridge.ts  localnet-token-info.json  set-bridge-mint.js  xmss-client.js
tests/: soqtec-bridge.ts
